# linc

./: .gitignore  Actions.elm  Ast.elm  Buttons.elm  Cargo.toml  Defaults.elm  GetContext.elm  GetNode.elm  Makefile  Print.elm  README.md  SetNode.elm  Types.elm  build  default.nix  deploy  elm-package.json  elm.json  flake.nix  index-1cd58e0489d5cdb9.js  index-1cd58e0489d5cdb9_bg.wasm  index-1d62d1c5ae902a70.js  index-1d62d1c5ae902a70_bg.wasm  index-22a6df79b2a20e04.js  index-22a6df79b2a20e04_bg.wasm  index-2348a9968d98f2c4.js  index-2348a9968d98f2c4_bg.wasm  index-28bee1995041d005.js  index-28bee1995041d005_bg.wasm  index-49fdcc1ecb7397cc.js  index-49fdcc1ecb7397cc_bg.wasm  index-4c09ff945571f66b.js  index-4c09ff945571f66b_bg.wasm  index-51613921ec4ab011.js  index-51613921ec4ab011_bg.wasm  index-532adbc39fcac3e7.js  index-532adbc39fcac3e7_bg.wasm  index-6a45a98fb04a613d.js  index-6a45a98fb04a613d_bg.wasm  index-75e440407f63d176.js  (+54 more)
client/: Actions.elm  Ast.elm  Defaults.elm  GetContext.elm  GetNode.elm  Lens.elm  Persistence.elm  Print.elm  Server.elm  SetNode.elm  Types.elm  main.elm
client/Proto/: Ast.elm  Server.elm
client/proto/: Ast.elm  Server.elm
generate_cargo_toml/: Cargo.toml
generate_cargo_toml/src/: main.rs
proto/: Ast.elm  ast.proto  server.proto
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/static/: index.html  style.css
server/: main.go
server/proto/: ast.pb.go  server.pb.go
src/: command_line.rs  ent.rs  generated.rs  initial.rs  lib.rs  main.rs  meta_schema.rs  model.rs  node.rs  pretty_print.rs  schema.rs  tests.rs  transform.rs  tree.rs  types.rs  view.rs
static/: style.css
