[package]
name = "linc"
version = "0.1.0"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "*"
hex = "*"
itertools = "*"
log = "*"
maplit = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "*"
uuid = { version = "*", features = ["wasm-bindgen", "v4"] }
wasm-bindgen = "*"
wasm-logger = "*"
yew = "*"
