[package]
name = "linc"
version = "0.1.0"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "*"
gloo-storage = "*"
hex = "*"
html_parser = "*"
itertools = "*"
log = "*"
maplit = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "*"
uuid = { version = "*", features = ["wasm-bindgen", "v4"] }
wasm-bindgen = "*"
wasm-logger = "*"
web-sys = { version = "*", features = ["Selection"]}
yew = "*"
