[package]
name = "linc"
version = "0.1.0"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "*"
console_error_panic_hook = "*"
gloo-storage = "*"
gloo-events = "*"
gloo-utils = "*"
hex = "*"
html_parser = "*"
itertools = "*"
log = "*"
maplit = "*"
reqwasm = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "*"
sha2 = "*"
uuid = { version = "*", features = ["js", "v4"] }
wasm-bindgen = "*"
wasm-logger = "*"
web-sys = { version = "*", features = [
    "HtmlElement",
    "HtmlInputElement",
    "InputEvent",
    "MouseEvent",
    "Selection",
    ]}
yew = {version="*", features=["csr"]}
