[package]
name = "generate_cargo_toml"
version = "0.1.0"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "*"
base64 = "*"
cargo_toml = "*"
reqwest = {version="*", features=["json"]}
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.15.0", features = ["full"] }
toml = "*"
