[package]
name = "linc"
version = "0.1.0"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
